--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "musiku",
-	"private": true,
+	"private": false,
+	"license": "MIT",
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
